E-Maj - Release notes
---------------------
<NEXT_VERSION>
------
Enhancements:
  - rollback simulations using the emaj_estimate_rollback_group() function is 
    now able to process protected groups or marks.
  - some minor code improvements.

Bug fixes:

2.0.0
------
Enhancements:
  - E-Maj is now installed as a standard extension using the CREATE
    EXTENSION SQL command.
  - the uninstallation script is renamed emaj_uninstall.sql and includes the 
    DROP EXTENSION statement.
  - PostgreSQL versions prior 9.1 are not supported by E-Maj anymore.
  - various changes in the functions code to take benefit from the features 
    brought by 8.4 to 9.1 postgres versions.
  - a new emaj_consolidate_rollback_group() function consolidates a rollback
    for a group. It means the function transforms a logged rollback already
    executed as if it were an unlogged rollback, by deleting all the log
    records and marks between the mark used as target for the already
    executed logged rollback and the mark that has taged the end of this
    rollback.
  - a new emaj_get_consolidable_rollbacks() function returns the list of 
    logged rollback operations that may be consolidated. Two of the returned 
    columns can directly feed the emaj_consolidate_rollback_group() function. 
    It also gives information about the amount of log updates that may be 
    deleted and the number of marks what would be deleted by a consolidation.
  - when postgres version allows it, add event triggers to protect 
    application or E-Maj components against drop or some table structure 
    changes. The new functions emaj_disable_protection_by_event_triggers() 
    and emaj_enable_protection_by_event_triggers() respectively disable and 
    re-enable these event triggers, if needed.
  - in emaj_start_group() and emaj_start_groups() functions, allow to not 
    supply the mark name parameter. In this case, the default mark name is