@@ -8,6 +8,9 @@ Enhancements:
   - some minor code improvements.
 
 Bug fixes:
+  - Fix the extension upgrade procedure. The extension upgrade scripts from 
+    unpackaged to 1.3.1 and from 1.3.1 to 2.0.0 failed to register the emaj 
+    technical tables as to be saved by pg_dump.
 
 2.0.0
 ------
